# rexpert

./: .bzrignore  ChangeLog  Makefile  Makefile.am  autogen.sh  buildconf  config.h.in  configure  configure.ac  configure.in  gregex  rexpert.glade  rexpert.gladep
po/: pt_BR.po  rexpert.pot
src/: Makefile.am  callbacks.c  callbacks.h  interface.c  main.c  rexpert.h  ui.c  ui.h  ui_utils.c  ui_utils.h
