dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(rexpert, 0.1)
AM_CONFIG_HEADER(config.h)
#AM_MAINTAINER_MODE
#AM_ACLOCAL_INCLUDE(aclocal)

#AC_ISC_POSIX

AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_INTLTOOL

pkg_modules="gtk+-2.0 >= 2.0.0"
pkg_modules2="libpcre >= 7.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules, $pkg_modules2])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=rexpert
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS="pt_BR"
AM_GLIB_GNU_GETTEXT

if test "x$MSGFMT" = "xno"; then
	AC_MSG_ERROR([msgfmt not found. Please install the gettext package.])
fi

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])

